@@ -1,3 +1,10 @@
+start-sanitize-sky
+Wed Jun  3 10:26:04 1998  Doug Evans  <devans@canuck.cygnus.com>
+
+	* config/tc-dvp.c (md_begin): Change alignment of .DVP.ovlytab to 4.
+	(create_vuoverlay_section): Entries are 4 bytes not 8.
+
+end-sanitize-sky
 Wed Jun  3 09:16:00 1998  Catherine Moore  <clm@cygnus.com>
  
         * config/tc-v850.c (md_begin):  Don't create special
